src/test/ui/nll/user-annotations/promoted-annotation.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/promoted-annotation.rs:6:7
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
LL |     let x = 0;
LL |     let f = &drop::<&'a i32>;
   |              --------------- type annotation requires that `x` is borrowed for `'a`
LL |     f(&x);
   |       ^^ borrowed value does not live long enough
LL |
LL | }
   | - `x` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promoted-annotation.rs:5:14
   |
LL |     let f = &drop::<&'a i32>;
   |              ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
